2000-09-17  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-database.c: Add new methods on ConfigDatabase

	* gconf/gconf.c: Add new methods on ConfigListener, but they
	do nothing at the moment

	* gconf/GConf.idl: Add some methods to ConfigListener to tell
	clients when they need to drop cached values Add batch_lookup()
	and batch_change() methods to ConfigDatabase so we can implement 
	them later

2000-09-16  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (gconf_engine_key_is_writable): And actually 
	implement it here. Doh.

	* wrappers/gtk/gconf-client.c (gconf_client_key_is_writable): Gee,
	forgot to actually implement this function after implementing all
	the backend work for it... 

	* gconf/gconf.c (corba_errno_to_gconf_errno): add
	NO_WRITABLE_DATABASE handling here also

	* gconf/gconfd.c (gconf_set_exception): handle
	NO_WRITABLE_DATABASE error

	* gconf/GConf.idl: Add NoWritableDatabase to error type enum

	* wrappers/gtk/testgconfclient.c (entry_attached_to): Update 
	to properly handle writability

	* examples/simple-controller.c (main): set entry sensitivity
	properly

	* examples/basic-gconf-app.c (main): Remove ref/sink and destroy,
	just use plain refcounting
	(create_config_entry): Set entry sensitivity according to key
	writability

	* wrappers/gtk/gconf-client.c (gconf_client_finalize): Move all
	cleanup to finalize, remove destroy handler	

2000-09-16  Havoc Pennington  <hp@pobox.com>

	* doc/gconf/tmpl/gconf-value.sgml: Update some docs

	* wrappers/gtk/gconf-client.c (notify_listeners_callback): Update
	to reflect new callback signature for GConfClientNotifyFunc

	* gconf/gconf-sources.c (gconf_sources_set_value): Make it an
	error to if we try to write a value for a non-writable source.
	This is new; it used to silently fail.

	* gconf/gconf-database.c (gconf_database_notify_listeners): Add
	is_writable here

	* gconf/GConf.idl: Add writable flag to notification

	* gconf/gconf.h: Update GConfNotifyFunc to have fewer args, and 