@@ -1,5 +1,12 @@
 2000-09-17  Havoc Pennington  <hp@pobox.com>
 
+	* gconf/gconf.c: Update to reflect IDL change
+
+	* gconf/GConf.idl: Change invalidate_cached_values() to take
+	multiple keys to invalidate; better efficiency that way
+
+2000-09-17  Havoc Pennington  <hp@pobox.com>
+
 	* gconf/gconf-database.c: Add new methods on ConfigDatabase
 
 	* gconf/gconf.c: Add new methods on ConfigListener, but they
